--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -16,6 +16,17 @@
   "name": "Adventures Trial",
   "files": [
     {
+      "projectID": 225635,
+      "fileID": 3883933,
+      "required": true,
+      "__meta": {
+        "name": "AgriCraft",
+        "dependencies": [
+          251396
+        ]
+      }
+    },
+    {
       "projectID": 231484,
       "fileID": 4065856,
       "required": true,
@@ -24,6 +35,15 @@
         "dependencies": [
           531761
         ]
+      }
+    },
+    {
+      "projectID": 251396,
+      "fileID": 3883932,
+      "required": true,
+      "__meta": {
+        "name": "InfinityLib",
+        "explicit": false
       }
     },
     {
