--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -71,6 +71,14 @@
       }
     },
     {
+      "projectID": 398521,
+      "fileID": 3999153,
+      "required": true,
+      "__meta": {
+        "name": "Farmer's Delight"
+      }
+    },
+    {
       "projectID": 402231,
       "fileID": 3998848,
       "required": true,
