--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -13,7 +13,7 @@
   "manifestVersion": 1,
   "version": "0.0.1",
   "author": "Clamatus",
-  "name": "Craftventures Trial",
+  "name": "Craftventures-Trial",
   "files": [
     {
       "projectID": 60028,
