--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,4 +99,4 @@ jobs:
           body_path: CHANGELOG.md
           files: ${{ needs.modpack-info.outputs.projectname }}-${{ needs.modpack-info.outputs.tag }}.zip
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
