--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -11,7 +11,7 @@
   "manifestType": "minecraftModpack",
   "overrides": "overrides",
   "manifestVersion": 1,
-  "version": "0.0.3",
+  "version": "0.0.3.1",
   "author": "Clamatus",
   "name": "Craftventures-Trial",
   "files": [
@@ -306,6 +306,14 @@
       "required": true,
       "__meta": {
         "name": "Magnesium/Rubidium Dynamic Lights"
+      }
+    },
+    {
+      "projectID": 560323,
+      "fileID": 3669114,
+      "required": true,
+      "__meta": {
+        "name": "Feature NBT Deadlock Be Gone"
       }
     },
     {
