--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -172,6 +172,36 @@
       }
     },
     {
+      "projectID": 268560,
+      "fileID": 3875976,
+      "required": true,
+      "__meta": {
+        "name": "Mekanism"
+      }
+    },
+    {
+      "projectID": 268566,
+      "fileID": 3875978,
+      "required": true,
+      "__meta": {
+        "name": "Mekanism Generators",
+        "dependencies": [
+          268560
+        ]
+      }
+    },
+    {
+      "projectID": 268567,
+      "fileID": 3875979,
+      "required": true,
+      "__meta": {
+        "name": "Mekanism Tools",
+        "dependencies": [
+          268560
+        ]
+      }
+    },
+    {
       "projectID": 272302,
       "fileID": 3713972,
       "required": true,
@@ -246,6 +276,17 @@
       "__meta": {
         "name": "Citadel",
         "explicit": false
+      }
+    },
+    {
+      "projectID": 345425,
+      "fileID": 3875980,
+      "required": true,
+      "__meta": {
+        "name": "Mekanism Additions",
+        "dependencies": [
+          268560
+        ]
       }
     },
     {
